--- a/package.json
+++ b/package.json
@@ -5,8 +5,15 @@
     "start": "meteor run"
   },
   "dependencies": {
+    "apollo-client": "^0.4.12",
+    "apollo-server": "^0.2.5",
+    "body-parser": "^1.15.2",
+    "express": "^4.14.0",
+    "graphql": "^0.6.2",
+    "graphql-tools": "^0.6.4",
     "meteor-node-stubs": "~0.2.0",
     "react": "^15.3.0",
+    "react-apollo": "^0.4.6",
     "react-dom": "^15.3.0",
     "react-router": "^2.6.1"
   }
